--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -29,16 +29,17 @@ open_scenes=PackedStringArray("res://main.tscn")
 current_scene="res://main.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://character_body_2d.gd"]
-selected_script="res://character_body_2d.gd"
-open_help=[]
+open_scripts=["res://character_body_2d.gd", "res://character_body_2d_2.gd"]
+selected_script=""
+open_help=["Camera2D"]
 script_split_offset=140
 list_split_offset=0
-zoom_factor=0.561933
+zoom_factor=1.29407
 
 [ShaderEditor]
 
