--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -11,3 +11,17 @@ state={
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
+
+[res://character_body_2d_2.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 21,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 3,
+"scroll_position": 7.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
