--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,7 +17,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://")
+dock_filesystem_selected_paths=PackedStringArray("res://character_body_2d_2.gd")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -34,9 +34,9 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://character_body_2d.gd", "res://character_body_2d_2.gd"]
-selected_script=""
-open_help=["Camera2D"]
+open_scripts=["res://character_body_2d_2.gd"]
+selected_script="res://character_body_2d_2.gd"
+open_help=["Input"]
 script_split_offset=140
 list_split_offset=0
 zoom_factor=1.29407
