--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -6,10 +6,10 @@ dock_5_selected_tab_idx=0
 dock_floating={}
 dock_bottom=[]
 dock_closed=[]
-dock_split_2=-503
+dock_split_2=104
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=971
+dock_hsplit_2=720
 dock_hsplit_3=-540
 dock_hsplit_4=0
 dock_filesystem_h_split_offset=480
@@ -17,25 +17,25 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray()
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scene/", "res://levels/")
+dock_filesystem_selected_paths=PackedStringArray("res://scene/platform_tile.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://sprites/", "res://Sounds/", "res://scripts/", "res://scene/", "res://levels/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scene/main.tscn", "res://scene/background.tscn", "res://levels/level1.tscn", "res://scene/mc.tscn", "res://scene/blue_bubble.tscn")
-current_scene="res://scene/blue_bubble.tscn"
+open_scenes=PackedStringArray("res://scene/main.tscn", "res://levels/level1.tscn", "res://scene/mc.tscn", "res://scene/blue_bubble.tscn", "res://scene/platform_tile.tscn", "res://Scene/platform_tile.tscn", "res://scene/bad.tscn")
+current_scene="res://scene/mc.tscn"
 center_split_offset=-743
-selected_default_debugger_tab_idx=0
+selected_default_debugger_tab_idx=1
 selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://scripts/blue_bubble.gd", "res://scripts/camera_2d.gd", "res://scripts/character_body_2d_2.gd"]
-selected_script="res://scripts/blue_bubble.gd"
+selected_script="res://scripts/character_body_2d_2.gd"
 open_help=["Input"]
 script_split_offset=140
 list_split_offset=0
