--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -2,7 +2,7 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_floating={}
 dock_bottom=[]
 dock_closed=[]
@@ -25,8 +25,8 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scene/main.tscn", "res://levels/level1.tscn", "res://scene/mc.tscn", "res://scene/blue_bubble.tscn", "res://scene/bad.tscn", "res://scene/platform_tile.tscn")
-current_scene="res://scene/blue_bubble.tscn"
+open_scenes=PackedStringArray("res://scene/main.tscn", "res://levels/level1.tscn", "res://scene/mc.tscn", "res://scene/blue_bubble.tscn", "res://scene/bad.tscn", "res://scene/trapped_bad.tscn")
+current_scene="res://scene/bad.tscn"
 center_split_offset=-743
 selected_default_debugger_tab_idx=1
 selected_main_editor_idx=2
@@ -34,8 +34,8 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://bad.gd", "res://scripts/blue_bubble.gd", "res://scripts/camera_2d.gd", "res://scripts/character_body_2d_2.gd"]
-selected_script="res://scripts/blue_bubble.gd"
+open_scripts=["res://bad.gd", "res://scripts/blue_bubble.gd", "res://scripts/camera_2d.gd", "res://scripts/character_body_2d_2.gd", "res://scripts/trapped_bad.gd"]
+selected_script="res://bad.gd"
 open_help=["Input"]
 script_split_offset=140
 list_split_offset=0
