--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,7 +17,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scene/bad.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://Sounds/bubble pop.wav")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://sprites/", "res://Sounds/", "res://scripts/", "res://scene/", "res://levels/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -26,17 +26,17 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://scene/main.tscn", "res://levels/level1.tscn", "res://scene/mc.tscn", "res://scene/blue_bubble.tscn", "res://scene/bad.tscn", "res://scene/trapped_bad.tscn")
-current_scene="res://scene/bad.tscn"
+current_scene="res://scene/blue_bubble.tscn"
 center_split_offset=-743
-selected_default_debugger_tab_idx=1
+selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://bad.gd", "res://scripts/blue_bubble.gd", "res://scripts/camera_2d.gd", "res://scripts/character_body_2d_2.gd", "res://scripts/trapped_bad.gd"]
-selected_script="res://bad.gd"
-open_help=["Input"]
+selected_script="res://scripts/blue_bubble.gd"
+open_help=["Input", "Vector2"]
 script_split_offset=140
 list_split_offset=0
 zoom_factor=1.29407
