--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -17,11 +17,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 31,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 38,
-"scroll_position": 24.0,
+"row": 42,
+"scroll_position": 37.26,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -31,12 +31,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 37,
+"column": 38,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 9,
-"scroll_position": 0.0,
-"selection": false,
+"row": 55,
+"scroll_position": 47.0,
+"selection": true,
+"selection_from_column": 1,
+"selection_from_line": 55,
+"selection_to_column": 38,
+"selection_to_line": 55,
 "syntax_highlighter": "GDScript"
 }
 
