--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,7 +17,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scene/ground.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://scene/mc.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scene/", "res://levels/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -26,10 +26,10 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://scene/main.tscn", "res://levels/level1.tscn", "res://scene/mc.tscn", "res://scene/blue_bubble.tscn", "res://scene/bad.tscn", "res://scene/trapped_bad.tscn", "res://scene/platform_tile.tscn", "res://scene/group_tile.tscn", "res://scene/ground.tscn")
-current_scene="res://scene/mc.tscn"
+current_scene="res://levels/level1.tscn"
 center_split_offset=-743
 selected_default_debugger_tab_idx=1
-selected_main_editor_idx=2
+selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [ScriptEditor]
