--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,25 +17,26 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scene/mc.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scene/", "res://levels/")
+dock_filesystem_selected_paths=PackedStringArray("res://scene/background.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Sounds/", "res://scene/", "res://levels/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scene/main.tscn", "res://levels/level1.tscn", "res://scene/mc.tscn", "res://scene/blue_bubble.tscn", "res://scene/bad.tscn", "res://scene/trapped_bad.tscn", "res://scene/platform_tile.tscn", "res://scene/group_tile.tscn", "res://scene/ground.tscn")
-current_scene="res://scene/mc.tscn"
-center_split_offset=-743
-selected_default_debugger_tab_idx=1
+<<<<<<<Updatedupstreamopen_scenes=PackedStringArray("res://scene/main.tscn", "res://levels/level1.tscn", "res://scene/mc.tscn", "res://scene/blue_bubble.tscn", "res://scene/bad.tscn", "res://scene/trapped_bad.tscn", "res://scene/platform_tile.tscn", "res://scene/group_tile.tscn", "res://scene/ground.tscn")
+current_scene="res://scene/trapped_bad.tscn"
+center_split_offset=-491
+selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
 selected_bottom_panel_item=0
+open_scenes=PackedStringArray("res://scene/main.tscn", "res://levels/level1.tscn", "res://scene/blue_bubble.tscn", "res://scene/bad.tscn", "res://scene/trapped_bad.tscn", "res://scene/platform_tile.tscn", "res://scene/group_tile.tscn", "res://scene/ground.tscn", "res://scene/mc.tscn", "res://scene/popped_bad.tscn")
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/bad.gd", "res://scripts/blue_bubble.gd", "res://scripts/camera_2d.gd", "res://scripts/character_body_2d_2.gd", "res://scripts/ground.gd", "res://scripts/platform_tile.gd", "res://scripts/trapped_bad.gd"]
-selected_script="res://scripts/character_body_2d_2.gd"
+open_scripts=["res://scripts/bad.gd", "res://scripts/blue_bubble.gd", "res://scripts/camera_2d.gd", "res://scripts/character_body_2d_2.gd", "res://scripts/ground.gd", "res://scripts/platform_tile.gd", "res://scene/popped_bad.gd", "res://scripts/trapped_bad.gd"]
+selected_script="res://scripts/trapped_bad.gd"
 open_help=["Input", "Vector2"]
 script_split_offset=140
 list_split_offset=0
@@ -47,3 +48,13 @@ open_shaders=[]
 split_offset=0
 selected_shader=""
 text_shader_zoom_factor=1.0
+
+[editor_log]
+
+log_filter_0=false
+log_filter_2=false
+log_filter_1=true
+log_filter_3=false
+log_filter_4=false
+collapse=false
+show_search=true
