--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -17,11 +17,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 57,
-"scroll_position": 48.0,
+"row": 71,
+"scroll_position": 67.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -31,16 +31,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 38,
+"column": 27,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 55,
-"scroll_position": 0.0,
+"row": 21,
+"scroll_position": 42.0,
 "selection": true,
-"selection_from_column": 1,
-"selection_from_line": 55,
-"selection_to_column": 38,
-"selection_to_line": 55,
+"selection_from_column": 0,
+"selection_from_line": 17,
+"selection_to_column": 27,
+"selection_to_line": 21,
 "syntax_highlighter": "GDScript"
 }
 
@@ -49,11 +49,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 37,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 11,
-"scroll_position": 0.0,
+"row": 37,
+"scroll_position": 23.68,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -80,9 +80,13 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 21,
-"scroll_position": 0.0,
-"selection": false,
+"row": 13,
+"scroll_position": 5.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 13,
+"selection_to_column": 14,
+"selection_to_line": 14,
 "syntax_highlighter": "GDScript"
 }
 
@@ -96,6 +100,20 @@ state={
 "h_scroll_position": 0,
 "row": 0,
 "scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scene/popped_bad.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 14,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 5,
+"scroll_position": 29.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
