--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,8 +17,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scene/background.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Sounds/", "res://scene/", "res://levels/")
+dock_filesystem_selected_paths=PackedStringArray("res://scene/mc.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scene/", "res://levels/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -26,7 +26,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 <<<<<<<Updatedupstreamopen_scenes=PackedStringArray("res://scene/main.tscn", "res://levels/level1.tscn", "res://scene/mc.tscn", "res://scene/blue_bubble.tscn", "res://scene/bad.tscn", "res://scene/trapped_bad.tscn", "res://scene/platform_tile.tscn", "res://scene/group_tile.tscn", "res://scene/ground.tscn")
-current_scene="res://scene/trapped_bad.tscn"
+current_scene="res://scene/mc.tscn"
 center_split_offset=-491
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -36,7 +36,7 @@ open_scenes=PackedStringArray("res://scene/main.tscn", "res://levels/level1.tscn
 [ScriptEditor]
 
 open_scripts=["res://scripts/bad.gd", "res://scripts/blue_bubble.gd", "res://scripts/camera_2d.gd", "res://scripts/character_body_2d_2.gd", "res://scripts/ground.gd", "res://scripts/platform_tile.gd", "res://scene/popped_bad.gd", "res://scripts/trapped_bad.gd"]
-selected_script="res://scripts/trapped_bad.gd"
+selected_script="res://scripts/character_body_2d_2.gd"
 open_help=["Input", "Vector2"]
 script_split_offset=140
 list_split_offset=0
@@ -51,8 +51,8 @@ text_shader_zoom_factor=1.0
 
 [editor_log]
 
-log_filter_0=false
-log_filter_2=false
+log_filter_0=true
+log_filter_2=true
 log_filter_1=true
 log_filter_3=false
 log_filter_4=false
