--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -2,7 +2,7 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_floating={}
 dock_bottom=[]
 dock_closed=[]
@@ -26,17 +26,17 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 <<<<<<<Updatedupstreamopen_scenes=PackedStringArray("res://scene/main.tscn", "res://levels/level1.tscn", "res://scene/mc.tscn", "res://scene/blue_bubble.tscn", "res://scene/bad.tscn", "res://scene/trapped_bad.tscn", "res://scene/platform_tile.tscn", "res://scene/group_tile.tscn", "res://scene/ground.tscn")
-current_scene="res://scene/mc.tscn"
+current_scene="res://scene/win_loss_canvas_layer.tscn"
 center_split_offset=-491
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
 selected_bottom_panel_item=0
-open_scenes=PackedStringArray("res://scene/main.tscn", "res://levels/level1.tscn", "res://scene/blue_bubble.tscn", "res://scene/bad.tscn", "res://scene/trapped_bad.tscn", "res://scene/platform_tile.tscn", "res://scene/group_tile.tscn", "res://scene/ground.tscn", "res://scene/mc.tscn", "res://scene/popped_bad.tscn")
+open_scenes=PackedStringArray("res://scene/main.tscn", "res://levels/level1.tscn", "res://scene/blue_bubble.tscn", "res://scene/bad.tscn", "res://scene/trapped_bad.tscn", "res://scene/platform_tile.tscn", "res://scene/group_tile.tscn", "res://scene/ground.tscn", "res://scene/mc.tscn", "res://scene/popped_bad.tscn", "res://scene/win_loss_canvas_layer.tscn")
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/bad.gd", "res://scripts/blue_bubble.gd", "res://scripts/camera_2d.gd", "res://scripts/character_body_2d_2.gd", "res://scripts/ground.gd", "res://scripts/platform_tile.gd", "res://scene/popped_bad.gd", "res://scripts/trapped_bad.gd"]
-selected_script="res://scripts/character_body_2d_2.gd"
+open_scripts=["res://scripts/bad.gd", "res://scripts/blue_bubble.gd", "res://scripts/camera_2d.gd", "res://scripts/character_body_2d_2.gd", "res://scripts/ground.gd", "res://scripts/platform_tile.gd", "res://scene/popped_bad.gd", "res://scripts/trapped_bad.gd", "res://scene/win_loss_canvas_layer.gd"]
+selected_script="res://scene/win_loss_canvas_layer.gd"
 open_help=["Input", "Vector2"]
 script_split_offset=140
 list_split_offset=0
