--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,18 +19,18 @@ dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
 <<<<<<<Updatedupstreamdock_filesystem_selected_paths=PackedStringArray("res://scene/win_loss_canvas_layer.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scene/", "res://levels/")
-dock_filesystem_selected_paths=PackedStringArray("res://scene/bad.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://scene/platform_tile.tscn")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scene/main.tscn", "res://levels/level1.tscn", "res://scene/blue_bubble.tscn", "res://scene/mc.tscn", "res://scene/trapped_bad.tscn", "res://scene/ground.tscn", "res://scene/bad.tscn")
+open_scenes=PackedStringArray("res://scene/main.tscn", "res://levels/level1.tscn", "res://scene/blue_bubble.tscn", "res://scene/mc.tscn", "res://scene/trapped_bad.tscn", "res://scene/ground.tscn", "res://scene/large_ground.tscn", "res://scene/bad.tscn", "res://scene/platform_tile.tscn")
 current_scene="res://levels/level1.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [ScriptEditor]
