update default to level

--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -11,7 +11,8 @@ scripts=["res://scripts/waterbug.gd", "res://scripts/crab.gd", "res://scripts/bi
 
 [dialog_bounds]
 
-create_new_node=Rect2(830, 370, 900, 700)
+create_new_node=Rect2(830, 370, 1370, 700)
+project_settings=Rect2(592, 420, 2400, 1400)
 
 [script_setup]
 
