--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -84,10 +84,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 17,
+"column": 37,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 34,
+"row": 39,
 "scroll_position": 28.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -116,7 +116,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 0,
-"scroll_position": 0.0,
+"scroll_position": 1.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -140,15 +140,25 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
+"column": 38,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 26,
+"row": 10,
 "scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 0,
-"selection_to_column": 1,
-"selection_to_line": 26,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scripts/win_loss_canvas_layer.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 18,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 8,
+"scroll_position": 0.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
